--- a/src/index.html
+++ b/src/index.html
@@ -10,52 +10,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/login/images/icons/favicon.ico" />
-  <script src="../assets/template/build/js/custom.min.js"></script>
-  <script src="../assets/template/vendors/jquery/dist/jquery.min.js"></script>
+
 </head>
 
 
 <app-root></app-root>
-
-
-<script src="../assets/template/build/js/custom.min.js"></script>
-<script src="../assets/template/vendors/jquery/dist/jquery.min.js"></script>
-<script src="../assets/template/vendors/jquery/dist/jquery.min.js"></script>
-<!-- Bootstrap -->
+<!--script src="../assets/login/vendor/jquery/jquery-3.2.1.min.js"></script>
 <script src="../assets/template/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<!-- FastClick -->
+
+<script src="../assets/template/vendors/bootstrap/js/src/dropdown.js"></script>
+<script src="../assets/template/vendors/jquery/dist/jquery.min.js"></script>
+
+
 <script src="../assets/template/vendors/fastclick/lib/fastclick.js"></script>
-<!-- NProgress -->
+
 <script src="../assets/template/vendors/nprogress/nprogress.js"></script>
-<!-- Chart.js -->
+
 <script src="../assets/template/vendors/Chart.js/dist/Chart.min.js"></script>
-<!-- gauge.js -->
+
 <script src="../assets/template/vendors/gauge.js/dist/gauge.min.js"></script>
-<!-- bootstrap-progressbar -->
+
 <script src="../assets/template/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-<!-- iCheck -->
+
 <script src="../assets/template/vendors/iCheck/icheck.min.js"></script>
-<!-- Skycons -->
+
 <script src="../assets/template/vendors/skycons/skycons.js"></script>
-<!-- Flot -->
+
 <script src="../assets/template/vendors/Flot/jquery.flot.js"></script>
 <script src="../assets/template/vendors/Flot/jquery.flot.pie.js"></script>
 <script src="../assets/template/vendors/Flot/jquery.flot.time.js"></script>
 <script src="../assets/template/vendors/Flot/jquery.flot.stack.js"></script>
 <script src="../assets/template/vendors/Flot/jquery.flot.resize.js"></script>
-<!-- Flot plugins -->
+
 <script src="../assets/template/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
 <script src="../assets/template/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
 <script src="../assets/template/vendors/flot.curvedlines/curvedLines.js"></script>
-<!-- DateJS -->
+
 <script src="../assets/template/vendors/DateJS/build/date.js"></script>
-<!-- JQVMap -->
+
 <script src="../assets/template/vendors/jqvmap/dist/jquery.vmap.js"></script>
 <script src="../assets/template/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
 <script src="../assets/template/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
-<!-- bootstrap-daterangepicker -->
+
 <script src="../assets/template/vendors/moment/min/moment.min.js"></script>
 <script src="../assets/template/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-
+<script src="../assets/template/build/js/custom.min.js"></script-->
 
 </html>
